--- a/leo/TrivialDriveKotlin/app/build.gradle
+++ b/leo/TrivialDriveKotlin/app/build.gradle
@@ -23,8 +23,8 @@ android {
     buildToolsVersion '30.0.3'
 
     defaultConfig {
-        applicationId 'com.sample.android.trivialdrivesample'
-        minSdkVersion 21
+        applicationId 'com.sample.android.trivialdrivesample.leo'
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 8
         versionName "1.5"
