--- a/leo/TrivialDriveKotlin/app/src/main/AndroidManifest.xml
+++ b/leo/TrivialDriveKotlin/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2012 Google Inc. All rights reserved.
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,17 +14,18 @@
    limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sample.android.trivialdrivesample">
+    package="com.sample.android.trivialdrivesample.leo">
 
     <application
         android:name="com.sample.android.trivialdrivesample.TrivialDriveApplication"
         android:allowBackup="true"
-        android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme"
-        android:supportsRtl="true">
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.sample.android.trivialdrivesample.ui.MainActivity"
+            android:exported="true"
             android:label="@string/title_game_fragment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
